--- a/templates/base.html
+++ b/templates/base.html
@@ -45,9 +45,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="">Home
+        <a class="nav-link" href="{% url 'home' %}">Home
           <span class="sr-only">(current)</span>
         </a>
+      </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'command' %}">Generate Bulk Data</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'list_api' %}">API Response</a>
